image overflow css fixed

--- a/client/src/components/Post/post.scss
+++ b/client/src/components/Post/post.scss
@@ -69,6 +69,7 @@
             object-fit:  cover;
             object-position: top;
             margin-top: 20px;
+            max-width: 100%;
         }
     }
 
